--- a/downloadPCInfo.css
+++ b/downloadPCInfo.css
@@ -14,6 +14,14 @@ section {
     min-height: 100%;
 }
 
+.btn1 {
+    height: 1px; 
+    width: 100px;
+    margin: 20px 0 0 0;
+    background-color: transparent;
+    border: 0px solid transparent;
+}
+
 li {
     list-style-type: none;
 }
